--- a/src/components/export/Export.module.css
+++ b/src/components/export/Export.module.css
@@ -4,7 +4,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-evenly;
-	background-image: url("https://4.downloader.disk.yandex.com/preview/de8d1672444cf2dd6429c09c0678ef2b995dc04a664ba84fdfb4057359a1438a/inf/cB-lGmHSY18wFLLfbh-nRJaiSRSX391q1AHLq4_thKBGInwgvftlpMMYxT2AdPGWAfRVUDzxkVKoOBbhNIvnUA%3D%3D?uid=1680697291&filename=a.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&owner_uid=1680697291&tknv=v2&size=1672x976");
+	background-image: url("../../assets/a.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-attachment: fixed;
